# internal/controller/runs.go
@@ -3,8 +3,10 @@ package controller
 import (
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/labstack/echo/v4"
+	"gitlab.unjx.de/flohoss/gobackup/database"
 )
 
 //	@Schemes
@@ -21,4 +23,42 @@ func (c *Controller) GetRuns(ctx echo.Context) error {
 		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 	return ctx.JSON(http.StatusOK, c.service.GetRuns(id))
+}
+
+//	@Schemes
+//	@Tags		jobs
+//	@Accept		json
+//	@Param		id	path	int	true	"Job ID"
+//	@Success	200
+//	@Failure	400	{object}	echo.HTTPError
+//	@Failure	404	{object}	echo.HTTPError
+//	@Router		/jobs/{id}/runs [delete]
+func (c *Controller) DeleteJobRuns(ctx echo.Context) error {
+	start := time.Now().UnixMilli()
+	id, err := strconv.ParseUint(ctx.Param("id"), 10, 64)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+	job := c.service.GetJob(id)
+	if job.ID == 0 {
+		return echo.NewHTTPError(http.StatusNotFound, "job not found")
+	}
+	c.service.DeleteJobRuns(job.ID)
+	run := database.Run{
+		JobID:     job.ID,
+		StartTime: start,
+		Status:    database.LogInfo,
+	}
+	c.service.CreateOrUpdate(&run)
+	log := database.Log{
+		RunID:       run.ID,
+		LogType:     database.LogGeneral,
+		LogSeverity: database.LogInfo,
+		Message:     "runs cleared",
+		CreatedAt:   time.Now().UnixMilli(),
+	}
+	c.service.CreateOrUpdate(&log)
+	run.EndTime = time.Now().UnixMilli()
+	c.service.CreateOrUpdate(&run)
+	return ctx.NoContent(http.StatusOK)
 }
